fix: add missing colors for contributors to light theme

--- a/frontend/src/style/variables/_theme-light.scss
+++ b/frontend/src/style/variables/_theme-light.scss
@@ -177,6 +177,12 @@
   --color-ahead: var(--color-scale-g-5-100);
   --color-behind: var(--color-scale-r-6-100);
 
+  --color-num-commits: var(--color-scale-a-6-100);
+  --color-insertions: var(--color-scale-g-5-100);
+  --color-deletions: var(--color-scale-r-6-100);
+
+  --color-contributor-email: var(--color-scale-t-5-100);
+
   --color-make-commit-text: var(--color-scale-a-2-100);
   --color-make-commit-bg: var(--color-scale-g-3-100);
   --color-make-commit-bg-hover: var(--color-scale-g-2-100);
